# octoconda

./: .envrc  .gitignore  Cargo.toml  README.md  aqua.toml  blog.md  codebook.toml  config.toml  pixi.toml  test.toml
.github/workflows/: octoconda.yaml
scripts/: build.sh  package_all.sh  package_and_upload_all.sh  update_from_aqua_repository.py  upload_all.sh
src/: cli.rs  conda.rs  config_file.rs  github.rs  main.rs  package_generation.rs  types.rs
