[package]
name = "octoconda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
octocrab = { version = "0.47.0", features = ["stream"] }
rattler = "0.38.4"
rattler_conda_types = "0.40.4"
rattler_networking = "0.25.21"
rattler_repodata_gateway = { version = "0.24.14", features = ["gateway"] }
serde = "1.0.228"
toml = { version = "0.9.8", features = ["serde", "parse"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing", "io-std"] }
tokio-stream = "0.1.17"
url = { version = "2.5.7", features = ["serde"] }
tempfile = "3.23.0"
